feat: remove Itbit